--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "dist/",
   "projectname": "car-source-share-mp",
   "description": "车源分享",
-  "appid": "wx3eb58a1828f9ee08",
+  "appid": "wx78626fe80fa898f6",
   "setting": {
     "urlCheck": true,
     "es6": false,
